web/css/chat.css
/* ... */
.modal input[type=checkbox]:checked + label.checkbox:before {
  background-position:0 0;
  background-size:25px 25px;
  background-color:#2EC4B6;
}

.modal .chat-list {
  width:100%;
  height:60px;
  padding:0;
  display:block;
  position:relative;
  margin:25px 0 0 0;

  text-decoration:none;

  color:#011627;
  background:none;
  box-shadow:none;
  border-radius:3px;

  transition:all .1s;
}
.modal .chat-list:hover {
  background:rgba(0,0,0,0.2);
  box-shadow:0 0 0 10px rgba(0,0,0,0.2);
}
.modal .chat-list h1 {
  width:50%;
  height:40px;
  display:block;

  font-size:25px;
  line-height:30px;
  text-transform:capitalize;
  text-overflow:ellipsis;

  color:inherit;

  white-space:nowrap;
  overflow:hidden;
}
.modal .chat-list h2 {
  width:50%;
  height:20px;
  display:block;

  font-size:20px;
  line-height:20px;
  text-overflow:ellipsis;

  color:rgba(0,0,0,0.5);

  white-space:nowrap;
  overflow:hidden;
}
.modal .chat-list h2 .secure {
  color:#FF9F1C;
}
.modal .chat-list .notice {
  width:100%;
  height:60px;
  display:block;
  position:absolute;
  top:0; right:0; bottom:0; left:0;

  font-size:25px;
  font-weight:700;
  line-height:60px;
  text-align:center;
  text-transform:capitalize;

  color:#fff;
  background:#E71D36;
  box-shadow:0 0 0 10px #E71D36;
  border-radius:3px;
}

.modal .chat-list .actions {
  width:100%;
  height:50px;
  display:block;
  position:absolute;
  top:5px; right:0; bottom:5px; left:0;

  text-align:right;

  white-space:nowrap;
  overflow:hidden;
  transition:all .1s;
}
.modal .chat-list .actions .action {
  width:auto;
  height:50px;
  padding:0 25px;
  display:inline-block;
  margin:0 5px 0 10px;

  font-size:20px;
  font-weight:700;
  line-height:50px;
  text-decoration:none;
  text-align:center;
  text-transform:uppercase;

  color:rgba(0,0,0,0.8);
  background:rgba(0,0,0,0.5);
  border-radius:10px;

  cursor:pointer;
  transition:all .1s;
}
.modal .chat-list .actions .action:hover {
  color:rgba(0,0,0,0.9);
  background:rgba(0,0,0,0.6);
}

.modal .chat-list.blue {
  color:#359AFF;
}
.modal .chat-list.pink {
  color:#F92C89;
}
.modal .chat-list.green {
  color:#2EC4B6;
}
.modal .chat-list.red {
  color:#E71D36;
}
.modal .chat-list.yellow {
  color:#FF9F1C;
}
.modal .chat-list.orange {
  color:#F45D01;
}
.modal .chat-list.purple {
  color:#3D348B;
}

.modal .button {
  width:100%;
  height:50px;
  padding:0 25px;
  display:block;
  position:relative;
  margin:25px 0 0 0;

  font-size:20px;
  font-weight:700;
  line-height:50px;
  text-decoration:none;
  text-align:center;
  text-transform:uppercase;

  color:#2EC4B6;
  background:#fff;
  border-radius:10px;

  transition:.1s;
  cursor:pointer;
}
.modal .button:active,
.modal .button:focus,
.modal .button:hover {
  color:#fff;
  background:#2EC4B6;
}

.modal .button.red {
  color:#E71D36;
}
.modal .button.red:active,
.modal .button.red:focus,
.modal .button.red:hover {
  color:#fff;
  background:#E71D36;
}

.modal .button.yellow {
  color:#FF9F1C;
}
.modal .button.yellow:active,
.modal .button.yellow:focus,
.modal .button.yellow:hover {
  color:#fff;
  background:#FF9F1C;
}

.modal .button.dark {
  color:#011627;
}
.modal .button.dark:active,
.modal .button.dark:focus,
.modal .button.dark:hover {
  color:#fff;
  background:#011627;
}

.modal .multi-button {
  width:100%;
  height:auto;
  display:block;
  margin:25px 0 0 0;

  border-radius:10px;

  overflow:hidden;
}
.modal .multi-button .button {
  margin:0;
  border-radius:0;
}

.modal .button.loading {
  pointer-events:none;
}
.modal .button.loading:before {
  /* TODO: Make this nicer */
  height:100%;
  width:100%;
  display:block;
  position:absolute;
  top:0; right:0; bottom:0; left:0;

  font-size:20px;
  font-weight:700;
  line-height:50px;
  text-decoration:none;
  text-align:center;
  text-transform:capitalize;

  color:rgba(0,0,0,0.5);
  background:#EEEFED;
  border-radius:10px;

  content:"Loading ...";
}

.modal.error {
  color:#E71D36;
}

/* PAGE LOADING INDICATOR */

.full-loading {
  width:100vw;
  height:100vh;
  display:block;
  position:fixed;
  top:0; right:0; bottom:0; left:0;

  font-size:25px;
  font-weight:700;
  line-height:100vh;
  text-align:center;
  text-transform:capitalize;

  color:rgba(0,0,0,0.5);
  background:#EEEFED;
}

/* SMALL SCREENS */

@media (max-width: 600px) {
  /* SIDEBAR */
  .sidebar {
    /*WIP*/
    display:none;
  }
  /* CHAT */
  .chat {
    top:25px; right:25px; bottom:25px; left:25px;
  }
}

